Switch to nginx as web server

--- a/brewery/web/logs.html
+++ b/brewery/web/logs.html
@@ -4,7 +4,7 @@
     <title>Logs</title>
     <script type="text/javascript">
 
-LOGS_ROOT = "/bhware/bhbot/logs";
+LOGS_ROOT = "/bhware/logs";
 
 function extractlogs(elt, logs) {
     var t = elt.textContent;
