Add inputs watching web interface

--- a/brewery/web/index.html
+++ b/brewery/web/index.html
@@ -97,6 +97,7 @@ function fetchhostname() {
         <ul>
             <li><a href="logs.html" target="linktarget">Logs</a></li>
             <li><a href="remotecontrol.html" target="linktarget">Remote Control</a></li>
+            <li><a href="inputs.html" target="linktarget">Inputs</a></li>
             <li><a href="brewpad.html" target="linktarget">Brewpad</a></li>
             <li><a href="statemachines.html" target="linktarget">State Machines</a></li>
             <li><a href="pic/" target="linktarget">PIC</a></li>
