--- a/brewery/web/index.html
+++ b/brewery/web/index.html
@@ -3,131 +3,142 @@
 <head>
     <title id="title">BH Team robot web interface</title>
     <style type="text/css">
-html, body {
-    height: 100%;
-    width: 100%;
-    font-size: 10pt;
-}
+        html, body {
+            height: 100%;
+            width: 100%;
+            font-size: 10pt;
+        }
 
-#main {
-    display: flex;
-    flex-align: stretch;
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
+        #main {
+            display: flex;
+            flex-align: stretch;
+            border: 0;
+            margin: 0;
+            padding: 0;
+        }
 
-#toolbar {
-    width: 15em;
-    height: 100%;
-    background-color: #d3d7cf;
-    color: #2e3436;
-    border-color: #888a85;
-    border-style: solid;
-    border-width: 0 1px 0 0;
-}
+        #toolbar {
+            width: 15em;
+            height: 100%;
+            background-color: #d3d7cf;
+            color: #2e3436;
+            border-color: #888a85;
+            border-style: solid;
+            border-width: 0 1px 0 0;
+        }
 
-#toolbar h1 {
-    text-align: center;
-    text-shadow: 2px 2px 0px #2e3436;
-    margin: 0;
-    padding: 0.5em 0 0.5em 0;
-    color: #eeeeec;
-    background-color: #555753;
-    text-transform: capitalize;
-}
+        #toolbar h1 {
+            text-align: center;
+            text-shadow: 2px 2px 0px #2e3436;
+            margin: 0;
+            padding: 0.5em 0 0.5em 0;
+            color: #eeeeec;
+            background-color: #555753;
+            text-transform: capitalize;
+        }
 
-#toolbar ul {
-    padding: 0;
-}
+        #toolbar ul {
+            padding: 0;
+        }
 
-#toolbar li {
-    width: 100%;
-    height: 100%;
-    list-style: none;
-    border-style: solid;
-    border-color: #babdb6;
-    border-width: 1px 0 0 0;
-}
+        #toolbar li {
+            width: 100%;
+            height: 100%;
+            list-style: none;
+            border-style: solid;
+            border-color: #babdb6;
+            border-width: 1px 0 0 0;
+        }
 
-#toolbar li:last-child {
-    border-bottom-width: 1px;
-}
+        #toolbar li:last-child {
+            border-bottom-width: 1px;
+        }
 
-#toolbar li:hover {
-    background-color: #0099cc;
-}
+        #toolbar li:hover {
+            background-color: #0099cc;
+        }
 
-#toolbar a {
-    padding: 0.5em 0 0.5em 2.5em;
-    display: block;
-    color: #2e3436;
-    text-decoration: none;
-}
+        #toolbar a {
+            padding: 0.5em 0 0.5em 2.5em;
+            display: block;
+            color: #2e3436;
+            text-decoration: none;
+        }
 
-#content {
-    border: 0;
-    width: 100%;
-    height: 100%;
-}
+        #content {
+            border: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #infos {
+            margin: 3px;
+        }
     </style>
     <script type="text/javascript">
 
-function fetchhostname() {
-    var req = new XMLHttpRequest();
-    req.open("GET", "/brewery/hostname", true);
-    req.onreadystatechange = function(e) {
-        if (req.readyState == 4) {
-            if(req.status == 200) {
-                var h1 = document.getElementById("name");
-                h1.textContent = req.responseText;
-                var title = document.getElementById("title");
-                title.textContent = req.responseText + "'s web interface";
-            }
+        function fetchhostname() {
+            var req = new XMLHttpRequest();
+            req.open("GET", "/brewery/hostname", true);
+            req.onreadystatechange = function (e) {
+                if (req.readyState == 4) {
+                    if (req.status == 200) {
+                        var h1 = document.getElementById("name");
+                        h1.textContent = req.responseText;
+                        var title = document.getElementById("title");
+                        title.textContent = req.responseText + "'s web interface";
+                    }
+                }
+            };
+            req.send();
         }
-    };
-    req.send();
-}
 
     </script>
     <script src="js/jquery-1.11.2.js" language="JavaScript"></script>
     <script src="js/nunjucks.js" language="JavaScript"></script>
 </head>
 <body id="main" onload="fetchhostname()">
-    <div id="toolbar">
-        <h1 id="name">BH Team</h1>
+<div id="toolbar">
+    <h1 id="name">BH Team</h1>
+
+    <div id="infos">
         <div id="battery_level">
             Battery <span id="bat1">N/A</span> <span id="bat2">N/A</span>
         </div>
-        <ul>
-            <li><a href="logs.html" target="linktarget">Logs</a></li>
-            <li><a href="remotecontrol.html" target="linktarget">Remote Control</a></li>
-            <li><a href="inputs.html" target="linktarget">Inputs</a></li>
-            <li><a href="brewpad.html" target="linktarget">Brewpad</a></li>
-            <li><a href="statemachines.html" target="linktarget">State Machines</a></li>
-            <li><a href="pic/" target="linktarget">PIC</a></li>
-            <li><a href="fsroot/" target="linktarget">Root Dir</a></li>
-            <li><a href="bhware/" target="linktarget">Bhware Dir</a></li>
-            <li><a href="enginetests.html?pic=pic&speeds=Speeds" target="linktarget">Engines Speeds</a></li>
-            <li><a href="enginetests.html?pic=pic&voltages=Voltages" target="linktarget">Engines Voltages</a></li>
-            <li><a href="servo_calibration.html" target="linktarget">Servo calibration</a></li>
-
-        </ul>
+        <div>
+            Pose: <span id="current_pose">???</span>
+        </div>
     </div>
-    <iframe id="content" name="linktarget" border="0" src="logs.html"></iframe>
-<script language="JavaScript">
-    $.sysinfoCallbacks=$.Callbacks();
+    <ul>
+        <li><a href="logs.html" target="linktarget">Logs</a></li>
+        <li><a href="remotecontrol.html" target="linktarget">Remote Control</a></li>
+        <li><a href="inputs.html" target="linktarget">Inputs</a></li>
+        <li><a href="brewpad.html" target="linktarget">Brewpad</a></li>
+        <li><a href="statemachines.html" target="linktarget">State Machines</a></li>
+        <li><a href="pic/" target="linktarget">PIC</a></li>
+        <li><a href="fsroot/" target="linktarget">Root Dir</a></li>
+        <li><a href="bhware/" target="linktarget">Bhware Dir</a></li>
+        <li><a href="enginetests.html?pic=pic&speeds=Speeds" target="linktarget">Engines Speeds</a></li>
+        <li><a href="enginetests.html?pic=pic&voltages=Voltages" target="linktarget">Engines Voltages</a></li>
+        <li><a href="servo_calibration.html" target="linktarget">Servo calibration</a></li>
 
-    $.sysinfoCallbacks.add(function(data){
+    </ul>
+</div>
+<iframe id="content" name="linktarget" border="0" src="logs.html"></iframe>
+<script language="JavaScript">
+    $.sysinfoCallbacks = $.Callbacks();
+
+    $.sysinfoCallbacks.add(function (data) {
         $("#bat1").text(data.battery.left.voltage.toFixed(3));
         $("#bat2").text(data.battery.right.voltage.toFixed(3));
+        $("#current_pose").text(data.pose.x.toFixed(3) + " " + data.pose.y.toFixed(3) + " " + data.pose.angle.toFixed(3));
     });
 
-    setInterval(function() {
-        $.ajax("/sysinfo.json").success(function(data) {
+    setInterval(function () {
+        $.ajax("/sysinfo.json").success(function (data) {
             $.sysinfoCallbacks.fire(data);
         })
-    },1000);
+    }, 1000);
 
     nunjucks.configure("/templates");
 </script>
